--- a/miacohome.com/miacohome.com.csproj
+++ b/miacohome.com/miacohome.com.csproj
@@ -506,8 +506,53 @@
     <Content Include="Config\Lang\zh-CN.user.xml" />
     <Content Include="Config\Splashes\booting.aspx" />
     <Content Include="Config\Splashes\noNodes.aspx" />
+    <Content Include="css\EditorStyles.css" />
+    <Content Include="css\Style.css" />
+    <Content Include="css\StylesDropdown.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="images\5316-Krikla-Website-Previous-Success-Five-Storey-Townhouse-In-Chelsea-1-1.jpg" />
+    <Content Include="images\bann1.jpg" />
+    <Content Include="images\bann2.jpg" />
+    <Content Include="images\bann3.jpg" />
+    <Content Include="images\Banner01.jpg" />
+    <Content Include="images\banner02.jpg" />
+    <Content Include="images\banner03.jpg" />
+    <Content Include="images\banner04.jpg" />
+    <Content Include="images\BEDROOM FLAT. BUDGET £10,000-02.jpg" />
+    <Content Include="images\Capture01.JPG" />
+    <Content Include="images\Capture02.JPG" />
+    <Content Include="images\Capture03.JPG" />
+    <Content Include="images\cinqueterre.jpg" />
+    <Content Include="images\IMG_1068-1.jpg" />
+    <Content Include="images\Messenger.png" />
+    <Content Include="images\portfolio.jpg" />
+    <Content Include="images\Portfolio_01.jpg" />
+    <Content Include="images\Portfolio_01_01.jpg" />
+    <Content Include="images\Portfolio_01_02.jpg" />
+    <Content Include="images\Portfolio_01_03.jpg" />
+    <Content Include="images\Portfolio_01_04.jpg" />
+    <Content Include="images\Portfolio_01_05.jpg" />
+    <Content Include="images\Portfolio_01_06.jpg" />
+    <Content Include="images\Portfolio_02.jpg" />
+    <Content Include="images\SOLUTIONS_01.JPG" />
+    <Content Include="images\SOLUTIONS_02.JPG" />
+    <Content Include="images\solution_03.JPG" />
+    <Content Include="images\solution_04.JPG" />
+    <Content Include="images\step0301.jpg" />
+    <Content Include="images\step0302.jpg" />
+    <Content Include="images\step04.jpg" />
+    <Content Include="images\steps01.jpg" />
+    <Content Include="images\steps02.jpg" />
+    <Content Include="js\Slider\jquery-1.9.1.min.js" />
+    <Content Include="js\Slider\jquery-2.1.1.min.js" />
+    <Content Include="js\Slider\jquery.galleryview-3.0-dev.js" />
+    <Content Include="js\Slider\jquery.jcarousel.min.js" />
+    <Content Include="js\Slider\jquery.singlePageNav.min.js" />
+    <Content Include="js\Slider\jquery.timers-1.2.js" />
+    <Content Include="js\Slider\js-image-slider.js" />
+    <Content Include="js\Slider\jssor.slider.min.js" />
+    <Content Include="js\Slider\slider.js" />
     <Content Include="Umbraco\Actions\delete.aspx" />
     <Content Include="Umbraco\Actions\editContent.aspx" />
     <Content Include="Umbraco\Actions\preview.aspx" />
@@ -2117,6 +2162,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="css\Slider\" />
+    <Folder Include="fonts\" />
     <Folder Include="Models\" />
     <Folder Include="Views\cONTACTS\" />
   </ItemGroup>
