done contact Umbraco.

--- a/miacohome.com/App_Data/umbraco.config
+++ b/miacohome.com/App_Data/umbraco.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE root [<!ELEMENT blogItem ANY>
+<!DOCTYPE root [<!ELEMENT potential_Customer ANY>
+<!ATTLIST potential_Customer id ID #REQUIRED>
+<!ELEMENT blogItem ANY>
 <!ATTLIST blogItem id ID #REQUIRED>
 <!ELEMENT portfolio_item ANY>
 <!ATTLIST portfolio_item id ID #REQUIRED>
@@ -466,7 +468,20 @@
         <blogHot>0</blogHot>
       </blogItem>
     </bLOG>
-    <cONTACTS id="1085" key="5468057f-cf75-40a5-afc9-8e5f1db1c595" parentID="1074" level="2" creatorID="0" sortOrder="5" createDate="2018-05-19T20:33:09" updateDate="2018-05-19T20:33:09" nodeName="CONTACTS" urlName="contacts" path="-1,1074,1085" isDoc="" nodeType="1062" creatorName="PhatNguyen" writerName="PhatNguyen" writerID="0" template="1057" nodeTypeAlias="cONTACTS" isPublished="true" />
+    <cONTACTS id="1085" key="5468057f-cf75-40a5-afc9-8e5f1db1c595" parentID="1074" level="2" creatorID="0" sortOrder="5" createDate="2018-05-19T20:33:09" updateDate="2018-05-19T20:33:09" nodeName="CONTACTS" urlName="contacts" path="-1,1074,1085" isDoc="" nodeType="1062" creatorName="PhatNguyen" writerName="PhatNguyen" writerID="0" template="1057" nodeTypeAlias="cONTACTS" isPublished="true">
+      <potential_Customer id="1157" key="fc046a69-19a9-40c4-a68e-0750505e76e8" parentID="1085" level="3" creatorID="0" sortOrder="0" createDate="2018-05-20T09:32:26" updateDate="2018-05-20T09:32:26" nodeName="PhatNguyen" urlName="phatnguyen" path="-1,1074,1085,1157" isDoc="" nodeType="1072" creatorName="PhatNguyen" writerName="PhatNguyen" writerID="0" template="0" nodeTypeAlias="potential_Customer" isPublished="true">
+        <message><![CDATA[asdasdad]]></message>
+        <email_customer><![CDATA[tanphat2k4@gmail.com]]></email_customer>
+        <subject><![CDATA[dsdsa]]></subject>
+        <name_customer><![CDATA[PhatNguyen]]></name_customer>
+      </potential_Customer>
+      <potential_Customer id="1158" key="d78c12d0-1af8-41ab-8c32-93b15440625c" parentID="1085" level="3" creatorID="0" sortOrder="1" createDate="2018-05-20T11:15:29" updateDate="2018-05-20T11:15:29" nodeName="sdads" urlName="sdads" path="-1,1074,1085,1158" isDoc="" nodeType="1072" creatorName="PhatNguyen" writerName="PhatNguyen" writerID="0" template="0" nodeTypeAlias="potential_Customer" isPublished="true">
+        <message><![CDATA[asdsda]]></message>
+        <email_customer><![CDATA[asd@gmail.com]]></email_customer>
+        <subject><![CDATA[asda]]></subject>
+        <name_customer><![CDATA[sdads]]></name_customer>
+      </potential_Customer>
+    </cONTACTS>
     <improvePacketForm id="1086" key="cc669e80-1751-4045-bc8d-35290ba7f37c" parentID="1074" level="2" creatorID="0" sortOrder="6" createDate="2018-05-19T20:33:23" updateDate="2018-05-19T20:38:23" nodeName="improve" urlName="improve" path="-1,1074,1086" isDoc="" nodeType="1067" creatorName="PhatNguyen" writerName="PhatNguyen" writerID="0" template="1058" nodeTypeAlias="improvePacketForm" isPublished="true">
       <hideInNavigation>1</hideInNavigation>
     </improvePacketForm>
