send mail with Gmail

--- a/miacohome.com/Web.config
+++ b/miacohome.com/Web.config
@@ -37,7 +37,12 @@
 	<log4net configSource="config\log4net.config" />
 
 	<appSettings>
-		<!--
+    <!---Setting for sendEmail-->
+    <add key="sendEmailForm" value="phat.nguyentan710202@gmail.com"/>
+    <add key="EmailPassword" value="Happyinyourself0202"/>
+    <add key="EmailSubject" value="Message from Umbraco.local site"/>
+    <!--
+		
       Umbraco web.config configuration documentation can be found here:
       http://our.umbraco.org/documentation/using-umbraco/config-files/#webconfig
       -->
@@ -78,11 +83,17 @@
 	</system.data>
 
 	<system.net>
-		<mailSettings>
+		<!--<mailSettings>
       <smtp from="noreply@example.com">
 				<network host="127.0.0.1" userName="username" password="password" />
 			</smtp>
-		</mailSettings>
+		</mailSettings>-->
+    <!---Gmail SMTP setting-->
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="tanphat2k4@gmail.com">
+        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="tanphat2k4@gmail.com" password="M@ney@nyWhere710202"/>
+      </smtp>
+    </mailSettings>
 	</system.net>
 
 	<system.web>
