--- a/miacohome.com/Web.config
+++ b/miacohome.com/Web.config
@@ -40,7 +40,7 @@
     <!---Setting for sendEmail-->
     <add key="sendEmailForm" value="phat.nguyentan710202@gmail.com"/>
     <add key="EmailPassword" value="Happyinyourself0202"/>
-    <add key="EmailSubject" value="Message from Umbraco.local site"/>
+    <add key="EmailSubject" value="Message from http://miacohome.com "/>
     <!--
 		
       Umbraco web.config configuration documentation can be found here:
@@ -90,8 +90,8 @@
 		</mailSettings>-->
     <!---Gmail SMTP setting-->
     <mailSettings>
-      <smtp deliveryMethod="Network" from="tanphat2k4@gmail.com">
-        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="tanphat2k4@gmail.com" password="M@ney@nyWhere710202"/>
+      <smtp deliveryMethod="Network" from="phat.nguyentan710202@gmail.com">
+        <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="phat.nguyentan710202@gmail.com" password="Happyinyourself0202"/>
       </smtp>
     </mailSettings>
 	</system.net>
